# fastapi-backend

./: .env.default  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: __main__.py  app.py  config.py  schemas.py
backend/db/: __init__.py  __main__.py  models.py  session.py
backend/repos/: individuals.py  places.py
backend/routers/: deps.py  individuals.py  places.py
